Scaffold thesis structure

--- a/thesis.tex
+++ b/thesis.tex
@@ -2,12 +2,6 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%% Colour Pallete Notes
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 %%% General Packages
 \usepackage{amsmath, amssymb, amsthm}
 \usepackage{titling}
@@ -163,7 +157,7 @@
 	
 	% Titlepage Options
 	\author{Damian Lin}
-	\title{thesistitle}
+	\title{On Connections Between the Kashiwara-Vergne Equations and the Finite-Type Theory of Virtual and Welded Knots}
 	
 	\cleardoublepage \thispagestyle{empty}
 	\null \vfil
@@ -194,23 +188,46 @@
 	\chapter*{Introduction}
 	\addcontentsline{toc}{chapter}{Introduction}
 	
-	This is the introduction. Maybe it could be on the first page.
+	This is the introduction.
 	
 	
 	\chapter*{Acknowledgements}
 	\addcontentsline{toc}{chapter}{Acknowledgements}
 	
-	These are the acknowledgements. We are very grateful.
+	These are the acknowledgements.
 	
 	
-	\chapter{chaptername}
-	This is chapter 1 - the first chapter.
+	\chapter{Finite Type Theory}
 	
-	\section{sectionname}
-	
-	This is section 1. This is a reference to \cite{the-knot-book}.
-	
-	\appendix 	
+	\section{Knots and Tangles}
+
+	This is a reference to \cite{the-knot-book}.
+
+	\section{Finite Type Invariants and Chord Diagrams}
+
+	\chapter{Virtual and Welded Knots}
+
+	\section{Virtual Knots and Welded Knots}
+
+	\section{Arrow Diagrams}
+
+	\chapter{Existing Topological Interpretations of the Kashiwara Vergne Equations}
+
+	\section{Lie Theory}
+
+	\section{Goldman-Turaev}
+
+	\section{Welded Foams}
+
+	\chapter{Uniting them via Emergent Tangles}
+
+	\section{Hopf Algebras}
+
+	\section{Emergent Tangles}
+
+	\chapter{Virtual Knot Tabulation?}
+
+	\appendix
 	\titleformat{\chapter}[display]
 	{\normalfont\bfseries\LARGE}
 	{\chaptertitlename~\thechapter}
@@ -218,7 +235,7 @@
 	{{\color{black!30!white}\titlerule[0.7pt]}{\color{white}\titlerule[0.7pt]}{\color{black!30!white}\titlerule[0.7pt]}\vspace{0.8pc}\normalfont\Large}
 	
 	\chapter{appendixname}
-	This is the first appendix.
+	This is the first appendix. The subject will be bialgebras.
 	
 	
 	\newpage
