Update after meeting 11/02/25

--- a/thesis.tex
+++ b/thesis.tex
@@ -157,7 +157,7 @@
 
         % Titlepage Options
         \author{Damian Lin}
-        \title{On Connections Between the Kashiwara-Vergne Equations and the Finite-Type Theory of Virtual and Welded Knots}
+        \title{(Towards) A Unified Topological Kashiwara-Vergne Theory}
 
         \cleardoublepage \thispagestyle{empty}
         \null \vfil
@@ -196,20 +196,19 @@
 
         These are the acknowledgements.
 
+        \chapter{Formality}
+        Filtered structures, associated graded structures, formality and how this leads to conections between Vassiliev Invariants and quantum algebra via a general application of Von Dyck's Theorem. Can include intro to PaT Vassiliev filatration, chord diagrams, Drinfeld Associators on a story sort of level.
 
-        \chapter{Finite Type Theory}
-
-        \section{Knots and Tangles}
+        \section{Filtrations}
+        \section{Associated Graded Functor}
 
         This is a reference to \cite{the-knot-book}.
 
         \section{Finite Type Invariants and Chord Diagrams}
 
-        \chapter{Virtual and Welded Knots}
+        \chapter{Lie Theory and the Kashiwara-Vergne Problem}
 
-        \section{Virtual Knots and Welded Knots}
-
-        \section{Arrow Diagrams}
+        Base this on Alekseev-Torossian or even WKOII.
 
         \chapter{Existing Topological Interpretations of the Kashiwara Vergne Equations}
 
@@ -219,11 +218,16 @@
 
         \section{Welded Foams}
 
-        \chapter{Uniting them via Emergent Tangles}
+        \chapter{Topological Approaches}
+        Welded foams (WKOII) vs Goldman-Turaev (AKKN) - pointing out the differences.
 
-        \section{Hopf Algebras}
+        Would be good to try writing here.
 
-        \section{Emergent Tangles}
+        \chapter{Emergent Tangles: Lifting Goldman-Turaev to 3 dimensions}
+        Zsuzsi et al paper in the works
+
+        \chapter{Emergent w-foams: Lifting goldman-Turaev to 4 dimensions}
+        Needs to be done mathematically
 
         \chapter{Virtual Knot Tabulation?}
 
