Add \draftnote and put some analogies in the intro

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,3 @@
- 
 @book{the-knot-book,
 	title={The Knot Book},
 	author={Adams, C.C.},
@@ -6,4 +5,14 @@
 	url={https://www.math.cuhk.edu.hk/course_builder/1920/math4900e/Adams--The%20Knot%20Book.pdf},
 	year={1994},
 	publisher={W.H. Freeman}
+}
+
+@book{knots-links-and-their-invariants,
+	title={Knots, Links and Their Invariants: An Elementary Course in Contemporary Knot Theory},
+	author={Sossinsky, A.B.},
+	isbn={9781470471514},
+	lccn={2022051584},
+	series={Student Mathematical Library},
+	year={2023},
+	publisher={American Mathematical Society}
 }
