--- a/thesis.tex
+++ b/thesis.tex
@@ -22,24 +22,16 @@
 
 %%% Graphics, Figure and Listing Packages
 \usepackage{graphicx}
+\usepackage{xcolor}
 \usepackage{float}
 \usepackage{calc}
 \usepackage{caption}
 \usepackage{subcaption}
-
-
-%%% Table Packages
-\usepackage{longtable}
+\usepackage[framemethod=tikz]{mdframed}
 
 
 %%% Epigraph
 \usepackage{epigraph}
-
-
-%%% Listings
-\usepackage{listings}
-\usepackage{lstfiracode}
-
 
 %%% Bibliography Packages
 \usepackage[style=alphabetic]{biblatex}
@@ -97,24 +89,12 @@
 % Caption setup
 \captionsetup{margin=1.5cm}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%% Listings Options
-\definecolor{codegreen}{rgb}{0,0.6,0}
-\definecolor{codegray}{rgb}{0.5,0.5,0.5}
-\definecolor{codepurple}{rgb}{0.58,0,0.82}
-\definecolor{codeback}{rgb}{0.95,0.95,0.92}
-\lstset{
-        language=Python,
-        backgroundcolor=\color{codeback},   
-        commentstyle=\color{codegreen},
-        keywordstyle=\color{magenta},
-        numberstyle=\tiny\color{codegray},
-        style=FiraCodeStyle,   % Use predefined FiraCodeStyle
-        basicstyle=\ttfamily,   % Use \ttfamily for source code listings
-        numbers=left
-}
+%%% Palettes
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 
 %%% Personal Macros
 \newcommand{\N}{\mathbb{N}}
@@ -132,21 +112,62 @@
 \renewcommand{\over}{\text{O}}
 \newcommand{\under}{\text{U}}
 
+%%% amsthm Environments
+
+% Define mdf style
+\mdfdefinestyle{lined}{%
+        middlelinewidth=2pt,
+        middlelinecolor=black,
+        bottomline=false,topline=false,rightline=false,
+        innertopmargin=-3pt
+}
+
+\newtheoremstyle{regular}% name
+  {}%         Space above, empty
+  {}%         Space below
+  {\upshape}% Body font
+  {}%         Indent amount (empty = no indent, \parindent = para indent)
+  {\bfseries\scshape}% Thm head font
+  {.}%        Punctuation after thm head
+  {.7em}% Space after thm head: \newline = linebreak
+  {}%         Thm head spec
+
+\theoremstyle{regular}
+
+\newtheorem{thm}{Theorem}
+
+\newtheorem{theorem}{Theorem}
+\surroundwithmdframed[style=lined,middlelinecolor=PineGreen]{theorem}
+
+\newtheorem{example}{Example}
+\surroundwithmdframed[style=lined,middlelinecolor=PineGreen]{example}
+
+\newtheorem{proposition}{Proposition}
+\surroundwithmdframed[style=lined,middlelinecolor=Plum]{proposition}
+
+\newtheorem{conjecture}{Conjecture}
+\surroundwithmdframed[style=lined,middlelinecolor=BrickRed]{conjecture}
+
+\newtheorem{lemma}{Lemma}
+\surroundwithmdframed[style=lined,middlelinecolor=Aquamarine]{lemma}
+
+\newtheorem{corollary}{Corollary}
+\surroundwithmdframed[style=lined,middlelinecolor=RoyalPurple]{corollary}
+
 %%% Drafting Macros
-\newcommand{\notered}[1]{{\color{Red} \textbf{#1}}}
-\newcommand{\notegreen}[1]{{\color{Green} \textbf{#1}}}
-\newcommand{\noteblue}[1]{{\color{Blue} \textbf{#1}}}
 
-%%% amsthm Options
-\newtheorem*{theorem}{Theorem}
-\newtheorem*{proposition}{Proposition}
-\newtheorem*{conjecture}{Conjecture}
-\newtheorem*{lemma}{Lemma}
-\newtheorem*{corollary}{Corollary}
-
-\newtheoremstyle{upright}{3pt}{3pt}{}{}{\bfseries}{.}{.5em}{}
-\theoremstyle{upright}
-\newtheorem*{algorithm}{Algorithm}
+\mdfdefinestyle{draftnote}{%
+        outerlinewidth=0.4pt,
+        innerlinewidth=0.4pt,
+        middlelinewidth=1pt,
+        middlelinecolor=white,
+        backgroundcolor=red!10,
+}
+\newcommand{\draftnote}[1]{
+\begin{mdframed}[style=draftnote]
+        {\color{Gray}{\scshape Note:} #1 }
+\end{mdframed}
+}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -176,7 +197,7 @@
                 {\large Pure Mathematics\\[5pt]
                         University of Sydney}\\
                 \vskip6mm
-                \includegraphics[width=25mm]{graphics/USY_MB1_CMYK_Stacked_Logo}
+                \includegraphics[width=25mm]{graphics/USY_MB1_CMYK_Stacked_Logo.pdf}
                 \vfil
                 \normalsize\today
         \end{center}
@@ -185,16 +206,30 @@
 
         \tableofcontents
 
-        \chapter*{Introduction}
-        \addcontentsline{toc}{chapter}{Introduction}
-
-        This is the introduction.
-
-
         \chapter*{Acknowledgements}
         \addcontentsline{toc}{chapter}{Acknowledgements}
 
         These are the acknowledgements.
+
+        \chapter*{Introduction}
+        \addcontentsline{toc}{chapter}{Introduction}
+
+        \section*{The idea of Finite Type invariants}
+        \draftnote{Here I want to motivate the study of Finite-type invariants in general, using analogies from discriminant theory.}
+
+        Various geometric or topological objects can be studied by considering not only those objects, but also their singular versions, and using this `discriminant set' to define and compute invariants. Take for example the following (simple) analogy:
+
+        \begin{example}[Finite type invariants of Quadratic Equations]
+                aksldjhkalsjd aksjd lkajs dlkasj lkdaj dklasj dlkajslkdjkashg fkjfsh kjshks
+                aksldjhkalsjd aksjd lkajs dlkasj lkdaj dklasj dlkajslkdjkashg fkjfsh kjshks
+                aksldjhkalsjd aksjd lkajs dlkasj lkdaj dklasj dlkajslkdjkashg fkjfsh kjshks
+                aksldjhkalsjd aksjd lkajs dlkasj lkdaj dklasj dlkajslkdjkashg fkjfsh kjshks
+                aksldjhkalsjd aksjd lkajs dlkasj lkdaj dklasj dlkajslkdjkashg fkjfsh kjshks
+        \end{example}
+
+        Countless other geometric and topological objects and their invariants can be described this way, for example, the inertial index of a quadratic form, the number of roots of cubic equations, etc. \cite{knots-links-and-their-invariants}.
+
+        \draftnote{Then I want to talk about the Dror Bar-Natan multiavriable calculus analogy a bit here.}
 
         \chapter{Formality}
         Filtered structures, associated graded structures, formality and how this leads to conections between Vassiliev Invariants and quantum algebra via a general application of Von Dyck's Theorem. Can include intro to PaT Vassiliev filatration, chord diagrams, Drinfeld Associators on a story sort of level.
