Some work on introduction

--- a/references.bib
+++ b/references.bib
@@ -1,18 +1,82 @@
-@book{the-knot-book,
-	title={The Knot Book},
-	author={Adams, C.C.},
-	isbn={9780821886137},
-	url={https://www.math.cuhk.edu.hk/course_builder/1920/math4900e/Adams--The%20Knot%20Book.pdf},
-	year={1994},
-	publisher={W.H. Freeman}
+@book{knots-links-and-their-invariants,
+	title = {Knots, Links and Their Invariants: An Elementary Course in
+	         Contemporary Knot Theory},
+	author = {Sossinsky, A.B.},
+	isbn = {9781470471514},
+	lccn = {2022051584},
+	series = {Student Mathematical Library},
+	year = {2023},
+	publisher = {American Mathematical Society},
 }
 
-@book{knots-links-and-their-invariants,
-	title={Knots, Links and Their Invariants: An Elementary Course in Contemporary Knot Theory},
-	author={Sossinsky, A.B.},
-	isbn={9781470471514},
-	lccn={2022051584},
-	series={Student Mathematical Library},
-	year={2023},
-	publisher={American Mathematical Society}
+@article{on-the-vassiliev-knot-invariants,
+	title = {On the Vassiliev knot invariants},
+	journal = {Topology},
+	volume = {34},
+	number = {2},
+	pages = {423-472},
+	year = {1995},
+	issn = {0040-9383},
+	doi = {https://doi.org/10.1016/0040-9383(95)93237-2},
+	url = {
+	       https://www.sciencedirect.com/science/article/pii/0040938395932372
+	       },
+	author = {Dror Bar-Natan},
+}
+
+@book{enveloping-algebras,
+	title = {Enveloping Algebras},
+	author = {Dixmier, J.},
+	isbn = {9780720404302},
+	lccn = {76002622},
+	series = {North-Holland mathematical library},
+	url = {https://books.google.com.au/books?id=Dl4ljyqGG9wC},
+	year = {1977},
+	publisher = {North-Holland Publishing Company},
+}
+
+@article{finite-type-invariants-of-w-knotted-objects-I,
+	author = {Dror Bar-Natan and Zsuzsanna Dancso},
+	title = {{Finite-type invariants of w-knotted objects, I: w-knots and
+	         the Alexander polynomial}},
+	volume = {16},
+	journal = {Algebraic & Geometric Topology},
+	number = {2},
+	publisher = {MSP},
+	pages = {1063 -- 1133},
+	keywords = {Alexander polynomial, associators, finite-type invariants,
+	            free Lie algebras, Kashiwara–Vergne, knotted graphs, Virtual
+	            knots, w-braids, welded knots, w-knots, w-tangles},
+	year = {2016},
+	doi = {10.2140/agt.2016.16.1063},
+	URL = {https://doi.org/10.2140/agt.2016.16.1063},
+}
+
+
+@article{finite-type-invariants-of-w-knotted-objects-II,
+	title = "Finite type invariants of w-knotted objects II: tangles, foams
+	         and the Kashiwara–Vergne problem",
+	keywords = "57M25",
+	author = "Dror Bar-Natan and Zsuzsanna Dancso",
+	year = "2017",
+	month = apr,
+	day = "1",
+	doi = "10.1007/s00208-016-1388-z",
+	language = "English",
+	volume = "367",
+	pages = "1517--1586",
+	journal = "Mathematische Annalen",
+	issn = "0025-5831",
+	publisher = "Springer",
+	number = "3-4",
+}
+
+@article{the-kashiwara-vergne-conjecture-and-drinfelds-associators,
+	title = {The Kashiwara-Vergne conjecture and Drinfeld’s associators},
+	author = {Anton Yu . Alekseev and Charles Torossian},
+	journal = {Annals of Mathematics},
+	year = {2008},
+	volume = {175},
+	pages = {415-463},
+	url = {https://www.jstor.org/stable/pdf/23234620.pdf},
 }
