Scaffold introduction on singularity theory

--- a/references.bib
+++ b/references.bib
@@ -24,6 +24,42 @@
 	author = {Dror Bar-Natan},
 }
 
+@book{complements-of-discriminants-of-smooth-maps-topology-and-applications,
+	isbn = {0821845551},
+	keywords = {Loop spaces ; Low-dimensional topology},
+	language = {eng},
+	publisher = {American Mathematical Society},
+	author = {Vasilev, V. A.},
+	address = {Providence, R.I},
+	booktitle = {Complements of discriminants of smooth maps : topology and
+	             applications},
+	series = {Translations of mathematical monographs, v. 98},
+	title = {Complements of discriminants of smooth maps : topology and
+	         applications },
+	year = {1992},
+}
+
+@inbook{cohomology-of-knot-spaces,
+	author = {Vassiliev, V.},
+	year = {1990},
+	month = {12},
+	pages = {23-70},
+	title = {Cohomology of knot spaces},
+	isbn = {9780821841006},
+	doi = {10.1090/advsov/001/03},
+}
+
+@book{knots-mathematics-with-a-twist,
+	author = {Sossinsky, A. B.},
+	publisher = {Harvard University Press},
+	booktitle = {Knots : Mathematics with a Twist},
+	isbn = {0674013816},
+	year = {2002},
+	title = {Knots : mathematics with a twist / by Alexei Sossinsky.},
+	language = {eng},
+}
+
+
 @book{enveloping-algebras,
 	title = {Enveloping Algebras},
 	author = {Dixmier, J.},
