Introductio fleshed out

--- a/references.bib
+++ b/references.bib
@@ -116,3 +116,11 @@
 	pages = {415-463},
 	url = {https://www.jstor.org/stable/pdf/23234620.pdf},
 }
+
+@book{introduction-to-vassiliev-invariants,
+	place = {Cambridge},
+	title = {Introduction to Vassiliev Knot Invariants},
+	publisher = {Cambridge University Press},
+	author = {Chmutov, S. and Duzhin, S. and Mostovoy, J.},
+	year = {2012},
+}
