Scaffole chord diagrams, associated gr, formality

--- a/references.bib
+++ b/references.bib
@@ -1,7 +1,7 @@
 @book{knots-links-and-their-invariants,
 	title = {Knots, Links and Their Invariants: An Elementary Course in
 	         Contemporary Knot Theory},
-	author = {Sossinsky, A.B.},
+	author = {Sossinsky, A. B.},
 	isbn = {9781470471514},
 	lccn = {2022051584},
 	series = {Student Mathematical Library},
@@ -27,9 +27,8 @@
 @book{complements-of-discriminants-of-smooth-maps-topology-and-applications,
 	isbn = {0821845551},
 	keywords = {Loop spaces ; Low-dimensional topology},
-	language = {eng},
 	publisher = {American Mathematical Society},
-	author = {Vasilev, V. A.},
+	author = {Vassiliev, V. A.},
 	address = {Providence, R.I},
 	booktitle = {Complements of discriminants of smooth maps : topology and
 	             applications},
@@ -40,11 +39,11 @@
 }
 
 @inbook{cohomology-of-knot-spaces,
-	author = {Vassiliev, V.},
+	author = {Vassiliev, V. A.},
 	year = {1990},
 	month = {12},
 	pages = {23-70},
-	title = {Cohomology of knot spaces},
+	booktitle = {Cohomology of knot spaces},
 	isbn = {9780821841006},
 	doi = {10.1090/advsov/001/03},
 }
@@ -55,10 +54,8 @@
 	booktitle = {Knots : Mathematics with a Twist},
 	isbn = {0674013816},
 	year = {2002},
-	title = {Knots : mathematics with a twist / by Alexei Sossinsky.},
-	language = {eng},
+	title = {Knots : mathematics with a twist},
 }
-
 
 @book{enveloping-algebras,
 	title = {Enveloping Algebras},
@@ -109,7 +106,7 @@
 
 @article{the-kashiwara-vergne-conjecture-and-drinfelds-associators,
 	title = {The Kashiwara-Vergne conjecture and Drinfeld’s associators},
-	author = {Anton Yu . Alekseev and Charles Torossian},
+	author = {Anton Y. Alekseev and Charles Torossian},
 	journal = {Annals of Mathematics},
 	year = {2008},
 	volume = {175},
@@ -123,4 +120,12 @@
 	publisher = {Cambridge University Press},
 	author = {Chmutov, S. and Duzhin, S. and Mostovoy, J.},
 	year = {2012},
+}
+
+@online{the-fundamental-theorem-of-vassiliev-invariants,
+	Author = {Dror Bar-Natan and Alexander Stoimenow},
+	Title = {The Fundamental Theorem of Vassiliev Invariants},
+	Year = {1997},
+	Eprint = {q-alg/9702009},
+	Eprinttype = {arXiv},
 }
