--- a/thesis.tex
+++ b/thesis.tex
@@ -285,12 +285,22 @@
                 Something like:
         }
 
-        The work of Vassiliev is to understand the space \(K \smallsetminus \Sigma\). Paths through this space correspond to isotopy on knots, so each component corresponds to a different knot. The locally constant functions on this space, that is the zeroth cohomology group, \(H^{0}(K \smallsetminus \Sigma, \mathcal{R})\) is exactly the group of knot invariants valued in \(\mathcal{R}\).
+        The work of Vassiliev is to understand the space
+        \(K \smallsetminus \Sigma\).
+        Paths through this space correspond to isotopy on knots, so each component corresponds to a different knot. The locally constant functions on this space, that is the zeroth cohomology group,
+        \({H^{0}(K \smallsetminus \Sigma, \mathcal{R})}\)
+        is exactly the group of knot invariants valued in
+        \(\mathcal{R}\).
 
         % TODO: Get someone who has any idea about spectral sequences to read this and see if it makes sense
-        In fact, Vassiliev looks at the more general question of computing the cohomology ring \(H^{\ast}(K \smallsetminus \Sigma, \mathcal{R})\). The Vassiliev invariants (of order \(i\)) are a certain subgroup of \(H^{0}(K \smallsetminus \Sigma)\) that (roughly) can be written as linking numbers with cycles in the homology group of the strata at depth \(i\) of the discriminant, cycles in \(H_{n - 1}(\Sigma_{i}, \mathcal{R})\).
+        In fact, Vassiliev looks at the more general question of computing the cohomology ring
+        \({H^{\ast}(K \smallsetminus \Sigma, \mathcal{R}})\).
+        The Vassiliev invariants (of order \(i\)) are a certain subgroup of
+        \({H^{0}(K \smallsetminus \Sigma)}\)
+        that (roughly) can be written as linking numbers with cycles in the homology group of the strata at depth \(i\) of the discriminant, cycles in
+        \({H_{n - 1}(\Sigma_{i}, \mathcal{R})}\).
 
-        As summarised in \cite{introduction-to-vassiliev-invariants}, Vassiliev constructs and uses tools in the arsenal of singularity theory to compute terms of the cohomological spectral sequence \(E^{p, q}_{r}\), and while it is unclear whether this contains all of the cohomological information about \(K \smallsetminus \Sigma\), its zero-dimensional cohomology classes are exactly the Vassiliev invariants.
+        As summarised in \cite{introduction-to-vassiliev-invariants}, Vassiliev constructs and uses tools in the arsenal of singularity theory to compute terms of the cohomological spectral sequence \(E^{p, q}_{r}\), and while it is unclear whether this contains all of the cohomological information about \({K \smallsetminus \Sigma}\), its zero-dimensional cohomology classes are exactly the Vassiliev invariants.
 
         In a more down-to-earth way of putting it, Vassiliev invariants are those which differ by predictable amounts on different sides of the strata, that is obeying the relation
         \begin{figure}[H]
@@ -311,10 +321,13 @@
 
         \scaffold{Filtered structures, associated graded structures, formality and how this leads to conections between Vassiliev Invariants and quantum algebra via a general application of Von Dyck's Theorem. Can include intro to PaT Vassiliev filatration, chord diagrams, Drinfeld Associators on a story sort of level.}
 
-        \section{Filtrations}
-        \section{Associated Graded Functor}
 
-        \section{Finite Type Invariants and Chord Diagrams}
+        \scaffold{In more detail. A section will be on chord diagrams and the associated graded. Since the introduction comes from the Vassiliev history space-of-knots point-of-view, I want to do things pretty formally with respect to the associated graded space. i.e. I don't want to say double point = overcrossing - undercrossing, as these two things are definitely not equal, but it is okay to say V(d.p.) = V(over) - V(under). To do this requires the treatment in \cite{the-fundamental-theorem-of-vassiliev-invariants}, which on the bright side means I get to talk about the polynomials analogy. It means that the statement becomes \[\text{weight systems} = \operatorname{gr}(\text{Vassiliev invariants})\] instead of directly \[\text{chord diagrams} = \operatorname{gr}(\text{singular knots})\] (or at least that's how it's put in \cite{the-fundamental-theorem-of-vassiliev-invariants}, but perhaps this can also be turned into a statement without all the implicit duals.}
+
+
+        %\section{Filtrations}
+        %\section{Associated Graded Functor}
+        %\section{Finite Type Invariants and Chord Diagrams}
 
         \chapter{Lie Theory and Jacobi Diagrams}
         \label{ch:lie-theory-and-jocobi-diagrams}
